--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
+        "laravel/telescope": "^5.4",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "fruitcake/laravel-telescope-toolbar": "^1.3",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
